--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -19,6 +19,15 @@ body {
   padding: 15px;
   margin: auto;
 }
+
+.form-signup {
+    width: 100%;
+    max-width: 660px;
+    padding: 15px;
+    margin: auto;
+  }
+
+
 .form-signin .checkbox {
   font-weight: 400;
 }
@@ -36,9 +45,4 @@ body {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
 }
